--- a/AppWebPruebaFinal/AppWebPruebaFinal.csproj
+++ b/AppWebPruebaFinal/AppWebPruebaFinal.csproj
@@ -12,7 +12,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Data\" />
+    <Folder Include="Data\Imagenes\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
