--- a/AppWebPruebaFinal/appsettings.json
+++ b/AppWebPruebaFinal/appsettings.json
@@ -6,6 +6,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "DefaultConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=C:\\USERS\\GUSTAVO\\SOURCE\\REPOS\\APPWEBPRUEBAFINAL\\APPWEBPRUEBAFINAL\\DATA\\INMOBILIARIA.MDF;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
+    "DefaultConnection": "Data Source=(LocalDB)\\MSSQLLocalDB;AttachDbFilename=C:\\Users\\gustavo\\source\\repos\\AppWebPruebaFinal\\AppWebPruebaFinal\\Data\\Inmobiliaria.mdf;Integrated Security=True"
   }
 }
